--- a/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
@@ -3,6 +3,7 @@
 //------------------------------------------------------------------------------
 
 @forward "badge";
+@forward "chip";
 @forward "heading";
 @forward "icon";
 @forward "list";
