--- a/dev/proto/ui_catalog/assets/scss/components/datas/list.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/list.scss
@@ -12,6 +12,8 @@
 
 	li
 	{
+		padding: var(--spacing-sm) 0;
+
 		&.clickable
 		{
 			cursor: pointer;
@@ -54,6 +56,7 @@
 		li
 		{
 			border: 1px solid var(--color-border);
+			padding: var(--spacing-sm) var(--spacing-md);
 
 			&:not(:last-child)
 			{
@@ -87,6 +90,8 @@
 
 		li
 		{
+			padding: var(--spacing-sm) var(--spacing-md);
+
 			&.clickable:hover
 			{
 				background-color: var(--color-shadow-weak);
