[UI catalog] feat: Brush up design

--- a/dev/proto/ui_catalog/assets/scss/components/datas/chip.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/chip.scss
@@ -22,6 +22,7 @@
 	border-radius: var(--radius-circle);
 	padding: var(--spacing-xs) var(--spacing-md);
 	color: var(--color-filled-text);
+	white-space: nowrap;
 
 	&.clickable
 	{
