[UI catalog] feat: Add code block component

--- a/dev/proto/ui_catalog/assets/scss/components/navigations/pagination.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/navigations/pagination.scss
@@ -246,7 +246,7 @@
 
 					&.page_now
 					{
-						background-color: var(--color-#{$color});
+						background-color: var(--color-#{$color}-dark);
 						color: var(--color-#{$color}-text);
 					}
 
