--- a/dev/system/layer/auth/templates/forgot_password_success.html
+++ b/dev/system/layer/auth/templates/forgot_password_success.html
@@ -1,9 +1,13 @@
 {% extends "common/base.html" %}
 
 {% block content %}
- <h1 class="ui_heading">{{ t!("pages.forgot_password_success.heading") }}</h1>
- <div class="ui_panel sm shadow radius padding_xl margin_lg flex column align_center gap_md">
-  <p>{{ t!("pages.forgot_password_success.body") }}</p>
-  <a href="/auth/login" class="ui_button primary full_horizon">{{ t!("pages.forgot_password_success.button.login") }}</a>
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center">
+  <div class="main_center_inner flex flex_column">
+   <h1 class="ui_heading h1 text_align_center margin_bottom">{{ t!("pages.forgot_password_success.heading") }}</h1>
+   <div class="ui_box surface radius_md padding_xl flex flex_column flex_gap_xl">
+    <p>{{ t!("pages.forgot_password_success.body") }}</p>
+    <a href="/auth/login" class="ui_button primary text_align_center">{{ t!("pages.forgot_password_success.button.login") }}</a>
+   </div>
+  </div>
  </div>
 {% endblock %}
