--- a/dev/system/layer/auth/templates/verify_code.html
+++ b/dev/system/layer/auth/templates/verify_code.html
@@ -1,22 +1,26 @@
 {% extends "common/base.html" %}
 
 {% block content %}
- <h1 class="ui_heading">{{ t!("pages.verify_code.heading") }}</h1>
- <div class="ui_panel sm shadow radius padding_xl margin_lg flex column align_center gap_md">
-  <form method="POST" action="/auth/verify_code" class="flex column align_center gap_md full_horizon">
-   <input type="hidden" name="token" value="{{ token }}">
-   <span>{{ t!("pages.verify_code.form.caution") }}</span>
-   <label class="flex column gap_sm full_horizon">
-    <span class="ui_label">{{ t!("pages.verify_code.form.code.label") }}</span>
-    <input type="text" name="code" class="ui_text">
-    {% if input_error.code.is_some() %}
-     <div class="ui_error">{{ input_error.code.as_ref().unwrap() }}</div>
-    {% endif %}
-   </label>
-   {% if input_error.other.is_some() %}
-    <div class="ui_error">{{ input_error.other.as_ref().unwrap() }}</div>
-   {% endif %}
-   <button type="submit" class="ui_button primary full_horizon">{{ t!("pages.verify_code.form.button.submit") }}</button>
-  </form>
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center">
+  <div class="main_center_inner flex flex_column">
+   <h1 class="ui_heading h1 text_align_center margin_bottom">{{ t!("pages.verify_code.heading") }}</h1>
+   <div class="ui_box surface radius_md padding_xl flex flex_column flex_gap_xl">
+    <form method="POST" action="/auth/verify_code" class="flex flex_column flex_gap_md">
+     <input type="hidden" name="token" value="{{ token }}">
+     <span>{{ t!("pages.verify_code.form.caution") }}</span>
+     <label class="flex flex_column flex_gap_sm">
+      <span>{{ t!("pages.verify_code.form.code.label") }}</span>
+      <input type="text" name="code" class="ui_text_field">
+      {% if input_error.code.is_some() %}
+       <div class="ui_alert filled error">{{ input_error.code.as_ref().unwrap() }}</div>
+      {% endif %}
+     </label>
+     {% if input_error.other.is_some() %}
+      <div class="ui_alert filled error">{{ input_error.other.as_ref().unwrap() }}</div>
+     {% endif %}
+     <button type="submit" class="ui_button primary text_align_center">{{ t!("pages.verify_code.form.button.submit") }}</button>
+    </form>
+   </div>
+  </div>
  </div>
 {% endblock %}
