--- a/dev/system/layer/auth/templates/common/base.html
+++ b/dev/system/layer/auth/templates/common/base.html
@@ -5,6 +5,8 @@
 
 <html class="height_full">
  <head>
+  <title>{% block title %}{% endblock %} - Meower</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="/auth/assets/css/ui.css" />
   <link rel="stylesheet" href="/auth/assets/css/style.css" />
  </head>
