--- a/dev/system/layer/auth/templates/common/header.html
+++ b/dev/system/layer/auth/templates/common/header.html
@@ -1,5 +1,5 @@
 {% macro render() %}
-<header class="header width_full">
- Header
+<header class="ui_box primary text_align_center padding_lg">
+ <div class="ui_heading h1">Meower</div>
 </header>
 {% endmacro %}
