--- a/dev/system/layer/auth/templates/reset_password.html
+++ b/dev/system/layer/auth/templates/reset_password.html
@@ -1,8 +1,10 @@
 {% extends "common/base.html" %}
 
+{% block title %}{{ t!("pages.reset_password.title") }}{% endblock %}
+
 {% block content %}
- <div class="flex_grow flex flex_column flex_align_center flex_justify_center">
-  <div class="main_center_inner flex flex_column">
+ <div class="flex_grow flex flex_column flex_align_center flex_justify_center padding_xl">
+  <div class="min_width_10xl flex flex_column">
    <h1 class="ui_heading h1 text_align_center margin_bottom">{{ t!("pages.reset_password.heading") }}</h1>
    <div class="ui_box surface radius_md padding_xl flex flex_column flex_gap_xl">
     <form method="POST" class="flex flex_column flex_gap_md">
