[UI catalog] feat: Add tooltip component

--- a/dev/proto/ui_catalog/assets/scss/components/datas/list.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/list.scss
@@ -1,5 +1,16 @@
 //------------------------------------------------------------------------------
 //	UI list
+//
+//
+//	# Usage
+//
+//	```html
+//	<ul class="ui_list">
+//	 <li>List Item 1</li>
+//	 <li>List Item 2</li>
+//	 <li>List Item 3</li>
+//	</ul>
+//	```
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
