--- a/dev/proto/ui_catalog/assets/scss/components/datas/table.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/table.scss
@@ -1,5 +1,34 @@
 //------------------------------------------------------------------------------
 //	UI table
+//
+//
+//	# Usage
+//
+//	```html
+//	<table class="ui_table">
+//	 <thead>
+//	  <tr>
+//	   <th>Header 1</th>
+//	   <th>Header 2</th>
+//	   <th>Header 3</th>
+//	  </tr>
+//	 </thead>
+//	 <tbody>
+//	  <tr>
+//	   <td>Data 1</td>
+//	   <td>Data 1</td>
+//	   <td>Data 1</td>
+//	  </tr>
+//	 </tbody>
+//	 <tfoot>
+//	  <tr>
+//	   <td>Footer 1</td>
+//	   <td>Footer 2</td>
+//	   <td>Footer 3</td>
+//	  </tr>
+//	 </tfoot>
+//	</table>
+//	```
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
