--- a/dev/proto/ui_catalog/assets/scss/common/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/index.scss
@@ -2,6 +2,7 @@
 //	Common styles
 //------------------------------------------------------------------------------
 
+@forward "display";
 @forward "flex";
 @forward "overflow";
 @forward "pointer_event";
