--- a/dev/system/layer/auth/templates/common/footer.html
+++ b/dev/system/layer/auth/templates/common/footer.html
@@ -1,5 +1,5 @@
 {% macro render() %}
 <footer class="ui_box filled text_align_center padding_lg">
- &copy 2024 Ichigo.
+ &copy 2024 Meower.
 </footer>
 {% endmacro %}
