--- a/dev/system/auth/core/templates/common/base.html
+++ b/dev/system/auth/core/templates/common/base.html
@@ -7,8 +7,7 @@
  <head>
   <title>{% block title %}{% endblock %} - Meower</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="/auth/assets/css/ui.css" />
-  <link rel="stylesheet" href="/auth/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/ui.css" />
  </head>
 
  <body class="flex flex_column min_height_full">
