--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/dialog.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/dialog.scss
@@ -22,7 +22,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 body:has(.ui_dialog.open)
 {
@@ -136,7 +136,7 @@ body:has(.ui_dialog.open)
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
