--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
@@ -14,7 +14,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_button_group
 {
@@ -121,7 +121,7 @@
 	//	Colors and Styles
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
