--- a/dev/proto/ui_catalog/assets/scss/components/datas/chip.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/chip.scss
@@ -10,7 +10,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_chip
 {
@@ -67,7 +67,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
