--- a/dev/proto/ui_catalog/assets/scss/components/datas/table.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/table.scss
@@ -32,7 +32,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_table
 {
@@ -166,7 +166,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
