--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
@@ -10,7 +10,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_alert
 {
@@ -40,7 +40,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
@@ -88,7 +88,7 @@
 	{
 		border: 2px solid var(--color-border);
 
-		@each $color in themes.$theme_colors
+		@each $color in colors.$colors
 		{
 			$class_name: string.str-replace(#{$color}, "-", "_");
 			&.#{$class_name}
@@ -102,7 +102,7 @@
 
 	&.filled
 	{
-		@each $color in themes.$theme_colors
+		@each $color in colors.$colors
 		{
 			$class_name: string.str-replace(#{$color}, "-", "_");
 			&.#{$class_name}
