--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/progress.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/progress.scss
@@ -10,7 +10,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 //------------------------------------------------------------------------------
 //	Spinner
@@ -63,7 +63,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
@@ -118,7 +118,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
