--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/snackbar.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/snackbar.scss
@@ -9,7 +9,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_snackbar
 {
@@ -70,7 +70,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
