--- a/dev/proto/ui_catalog/assets/scss/components/inputs/floating_button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/floating_button.scss
@@ -13,7 +13,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_floating_button
 {
@@ -49,7 +49,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
