--- a/dev/proto/ui_catalog/assets/scss/components/inputs/text_field.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/text_field.scss
@@ -11,7 +11,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_text_field
 {
@@ -85,7 +85,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace(#{$color}, "-", "_");
 		&.#{$class_name}
