--- a/dev/proto/ui_catalog/assets/scss/components/navigations/tabs.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/navigations/tabs.scss
@@ -15,7 +15,7 @@
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
-@use "../../themes/index" as themes;
+@use "../../variables/colors" as colors;
 
 .ui_tabs
 {
@@ -51,7 +51,7 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	@each $color in themes.$theme_colors
+	@each $color in colors.$colors
 	{
 		$class_name: string.str-replace($color, "-", "_");
 		&.#{$class_name}
