--- a/dev/proto/ui_catalog/assets/scss/components/datas/tooltip.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/tooltip.scss
@@ -34,6 +34,7 @@
 		opacity: 0;
 		visibility: hidden;
 		transition: all 0.3s 0s ease-in-out;
+		height: fit-content;
 
 		//	Default position is top.
 		&:before
