refactor: Refactor alert component

--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
@@ -79,6 +79,11 @@
 		-webkit-mask-image: var(--icon-svg-circle-check);
 	}
 
+	&.no_icon:before
+	{
+		display: none;
+	}
+
 
 	//--------------------------------------------------------------------------
 	//	Styles
