refactor: Refactor components

--- a/dev/proto/ui_catalog/assets/scss/common/typography.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/typography.scss
@@ -76,3 +76,53 @@
 {
 	text-align: right;
 }
+
+
+//------------------------------------------------------------------------------
+//	Font weight
+//------------------------------------------------------------------------------
+
+.text_thin
+{
+	font-weight: 100;
+}
+
+.text_extra_light
+{
+	font-weight: 200;
+}
+
+.text_light
+{
+	font-weight: 300;
+}
+
+.text_regular
+{
+	font-weight: 400;
+}
+
+.text_medium
+{
+	font-weight: 500;
+}
+
+.text_semi_bold
+{
+	font-weight: 600;
+}
+
+.text_bold
+{
+	font-weight: 700;
+}
+
+.text_extra_bold
+{
+	font-weight: 800;
+}
+
+.text_black
+{
+	font-weight: 900;
+}
